config/objects/Mode__c.object
<CustomObject>
    <fields>
        <fullName>Is_Consolidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Consolidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Intermodal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Intermodal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPH__c</fullName>
        <label>MPH</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mode</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>